Tue Nov 11 23:32:05 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* src/QGaimMainWindow.cpp:
	  - The Big List (TM) now looks like gtk-gaim's.

Tue Nov 11 17:28:01 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - It's now up to paintCell() to format the output for the group
	    information, and it looks much nicer.

Mon Nov 03 21:49:36 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimMainWindow.cpp:
	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Added an optional Big List, which is default for larger resolutions.

Mon Nov 03 15:40:36 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Fixed an image name in a menu.

Mon Nov 03 14:53:27 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimMainWindow.cpp:
	  - Fixed the order of core and UI initialization, so that signals in
	    QGaimBListWindow won't have problems.

Mon Nov 03 10:59:17 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fix icons in the preferences dialog.

Mon Nov 03 10:40:15 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* gaim.pro:
	  - Added 32x32 images for larger resolutions.

Mon Nov 03 08:30:17 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimMainWindow.cpp:
	  - Toolbar buttons are 32x32 on larger screens.

Mon Nov 03 00:46:06 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - Reduce the delay for the pop-up menu on the conversations button
	    to 250ms.

Mon Nov 03 00:36:53 PST 2003  Christian Hammond <chipx86@gnupdate.org>
